added doors and windows

--- a/SqlAlchemy_learning.ipynb
+++ b/SqlAlchemy_learning.ipynb
@@ -324,6 +324,15 @@
     "\n",
     "Base.metadata.create_all(engine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
   }
  ],
  "metadata": {
