working on print page

--- a/learning/SqlAlchemy_learning.ipynb
+++ b/learning/SqlAlchemy_learning.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "Wall 2                12 mm  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,22 +791,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5626090689409009\n",
-      "703.2613361761262\n",
-      "0.005047562385253079\n",
-      "6.057074862303694\n"
+      "1123.82\n",
+      "5.1\n",
+      "1.35\n"
      ]
     }
    ],
    "source": [
     "# iterate all rows\n",
+    "masonary_cement_bags = []\n",
+    "masonary_bricks = []\n",
+    "masonary_sand = []\n",
+    "\n",
     "for index, row in df.iterrows():\n",
     "    wall_length_feet = row[\"Wall Length feet\"]\n",
     "    wall_length_inch = row[\"Wall Length inch\"]\n",
@@ -850,9 +853,38 @@
     "\n",
     "    amount_of_sand = (int(sand_ratio)/int(sum_of_ratio)) * quantity_of_mortar\n",
     "    sand_in_kg = amount_of_sand * 1500\n",
-    "    print(number_of_bricks)\n",
-    "    print(num_of_cement_bags)\n",
-    "    print(sand_in_kg)"
+    "    sand_in_ton = sand_in_kg / 1000\n",
+    "    masonary_bricks.append(number_of_bricks)\n",
+    "    masonary_cement_bags.append(num_of_cement_bags)\n",
+    "    masonary_sand.append(sand_in_ton)\n",
+    "    # print(number_of_bricks)\n",
+    "    # print(num_of_cement_bags)\n",
+    "    # print(sand_in_kg)\n",
+    "\n",
+    "    plaster_area = total_wall_length_feet * total_wall_height_feet\n",
+    "    plaster_area_sqmtr = plaster_area / 10.764   \n",
+    "    # print(plaster_area)\n",
+    "    # print(plaster_area_sqmtr)\n",
+    "    volume_of_plaster_mortar = plaster_area_sqmtr * (int(row[\"Plastering thickness\"].replace(' mm', '')) / 1000)\n",
+    "    # print(volume_of_plaster_mortar)\n",
+    "    # Add 30% to fill up join & Cover surface\n",
+    "    volume_of_plaster_mortar = volume_of_plaster_mortar + (volume_of_plaster_mortar * (30/100)) \n",
+    " \n",
+    "    #  Increases by 25% of the total dry volume\n",
+    "    volume_of_plaster_mortar = volume_of_plaster_mortar + (volume_of_plaster_mortar * (25/100)) \n",
+    "    # print(volume_of_plaster_mortar)       \n",
+    "\n",
+    "    cement_bags_for_plastering = ((volume_of_plaster_mortar * int(cement_ratio)) / int(sum_of_ratio)) / 0.035\n",
+    "    # print(cement_bags_for_plastering)\n",
+    "\n",
+    "    sand_for_plastering = (((volume_of_plaster_mortar * int(sand_ratio)) / int(sum_of_ratio)) * 1550) / 1000\n",
+    "    # print(sand_for_plastering)\n",
+    "\n",
+    "    masonary_cement_bags.append(cement_bags_for_plastering)\n",
+    "    masonary_sand.append(sand_for_plastering)\n",
+    "print(round(sum(masonary_bricks),2))\n",
+    "print(round(sum(masonary_cement_bags),2))\n",
+    "print(round(sum(masonary_sand),2))\n"
    ]
   }
  ],
